@@ -431,36 +431,9 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_7">
           <item>
-           <widget class="QComboBox" name="selectFile">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="toolTip">
-             <string>select file</string>
-            </property>
-            <property name="insertPolicy">
-             <enum>QComboBox::InsertAlphabetically</enum>
-            </property>
-            <property name="sizeAdjustPolicy">
-             <enum>QComboBox::AdjustToContents</enum>
-            </property>
-            <property name="duplicatesEnabled">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="refreshSpectraListButton">
+           <widget class="QPushButton" name="selectSpectrumButton">
             <property name="text">
-             <string/>
-            </property>
-            <property name="icon">
-             <iconset theme="view-refresh">
-              <normaloff/>
-             </iconset>
+             <string>Select Spectrum</string>
             </property>
            </widget>
           </item>
